--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Thank you for your interest in volunteering with XTRABYTES.</p>
-    <p>We are currently seeking an experienced and highly skilled software developers to help with the development of our platform.</p>
+    <p>We are currently seeking experienced and highly skilled software developers to help with the development of our platform.</p>
     <p>xtrabytes.info@gmail.com</p>  
   </body>
 </html>
