--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <p>Thank you for your interest in volunteering with XTRABYTES.</p>
     <p>We are currently seeking experienced and highly skilled software developers to help with the development of our platform.</p>
     <p>xtrabytes.info@gmail.com</p>  
+    <p></p><p></p>
+    <p>The XTRABYTES project open community discussion space: <a href="https://discord.com/invite/Tt3dxeqB">https://discord.com/invite/Tt3dxeqB</a></p>
   </body>
 </html>
