--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <p>xtrabytes.info@gmail.com</p>  
     <p></p><p></p>
     <p>The XTRABYTES project open community discussion space: <a href="https://discord.com/invite/Tt3dxeqB">https://discord.com/invite/Tt3dxeqB</a></p>
+    <p>Wallet download links:</p>
+    <p><a href="https://github.com/XTRABYTES/XTRABYTES/releases/tag/pre-v1.5.1.0">XTRABYTES pre-v1.5.1.0</a><p>
+    <p>seed nodes: 144.172.126.16 163.172.62.105 86.84.116.184 34.207.69.193 177.206.60.4 94.23.18.226 77.8.240.123 54.39.243.49</p>
+    <p><a href="https://github.com/xtrabytesteam/xfuelclient/releases/tag/2.1.1.0-g">XFUEL pre-v2.1.1.0-g</a><p>
+    <p>seed nodes: 144.172.126.16 94.23.18.226 5.135.157.66 151.80.38.9 54.39.243.49</p>
+    
   </body>
 </html>
