--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <body>
     <p>Thank you for your interest in volunteering with XTRABYTES.</p>
     <p>We are currently seeking experienced and highly skilled software developers to help with the development of our platform.</p>
-    <p>xtrabytes.info@gmail.com</p>  
-    <p></p><p></p>
-    <p>The XTRABYTES project open community discussion space: <a href="https://discord.com/invite/Tt3dxeqB">https://discord.com/invite/Tt3dxeqB</a></p>
+    <p>Contact:<a href="mailto:xtrabytes.info@gmail.com">xtrabytes.info@gmail.com</a></p>  
+    <hr>
+    <p><b>XTRABYTES project open community discussion spaces:</b></p>
+    <p>Discord: <a href="https://discord.gg/rEyDE4Z4SQ">https://discord.gg/rEyDE4Z4SQ</a> or <a href="https://discord.gg/5b5GVbRJUh">https://discord.gg/5b5GVbRJUh</a></p>
+    <p>Telegram: <a href="https://t.me/xtrabytes_official">https://t.me/xtrabytes_official</a></p>
+    <hr>
     <p>Wallet download links:</p>
     <p><a href="https://github.com/XTRABYTES/XTRABYTES/releases/tag/pre-v1.5.1.0">XTRABYTES pre-v1.5.1.0</a><p>
     <p>seed nodes: 144.172.126.16 163.172.62.105 86.84.116.184 34.207.69.193 177.206.60.4 94.23.18.226 77.8.240.123 54.39.243.49</p>
     <p><a href="https://github.com/xtrabytesteam/xfuelclient/releases/tag/2.1.1.0-g">XFUEL pre-v2.1.1.0-g</a><p>
     <p>seed nodes: 144.172.126.16 94.23.18.226 5.135.157.66 151.80.38.9 54.39.243.49</p>
-    
+    <hr>
   </body>
 </html>
