--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Contact:<a href="mailto:xtrabytes.info@gmail.com">xtrabytes.info@gmail.com</a></p>  
     <hr>
     <p><b>XTRABYTES project open community discussion spaces:</b></p>
-    <p>Discord: <a href="https://discord.gg/rEyDE4Z4SQ">https://discord.gg/rEyDE4Z4SQ</a> or <a href="https://discord.gg/5b5GVbRJUh">https://discord.gg/5b5GVbRJUh</a></p>
+    <p>Discord: <a href="https://discord.gg/rEyDE4Z4SQ">https://discord.gg/rEyDE4Z4SQ</a> or <a href="https://discord.gg/QWu5bTvs">https://discord.gg/QWu5bTvs</a> or <a href="https://discord.gg/5b5GVbRJUh">https://discord.gg/5b5GVbRJUh</a></p>
     <p>Telegram: <a href="https://t.me/xtrabytes_official">https://t.me/xtrabytes_official</a></p>
     <hr>
     <p>Wallet download links:</p>
