--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>XTRABYTES</title>
   </head>
   <body>
+    <h2>Last news</h2>
+    <p>Old site and old services restored.<a href="https://explorer.xtrabytes.dev/explorer">https://explorer.xtrabytes.dev/explorer</a></p>
+    <hr>
     <p>Thank you for your interest in volunteering with XTRABYTES.</p>
     <p>We are currently seeking experienced and highly skilled software developers to help with the development of our platform.</p>
     <p>Contact:<a href="mailto:xtrabytes.info@gmail.com">xtrabytes.info@gmail.com</a></p>  
