--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
     <p>The backbone of the new features in the next XCITE desktop version. Implementation of the initial crypto functions of ICAN.<p>
     <p>Test1 success: menu items are visible and clickable<p>
     <p>Test2 success: if you see the ICAN number (each restart generates a new unique ICAN number)<p>
+    <p><a href="https://github.com/XTRABYTES/XCITE/releases/tag/V0.6.1">Download XCITE V0.6.1 (exe for windows)</a></p>
+    <p>Additional ICAN features + descriptions<p>   
   </body>
 </html>
