--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
     <p>Test2 success: if you see the ICAN number (each restart generates a new unique ICAN number)<p>
     <p><a href="https://github.com/XTRABYTES/XCITE/releases/tag/V0.6.1">Download XCITE V0.6.1 (exe for windows)</a></p>
     <p>Additional ICAN features + descriptions<p>   
+    <p><a href="https://github.com/XTRABYTES/XCITE/releases/tag/V0.6.1-mac">Download XCITE V0.6.1-mac (dmg for MacOS)</a></p>
+    <p>MAC support<p>   
   </body>
 </html>
