--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
     <p>Additional ICAN features + descriptions<p>   
     <p><a href="https://github.com/XTRABYTES/XCITE/releases/tag/V0.6.1-mac">Download XCITE V0.6.1-mac (dmg for MacOS)</a></p>
     <p>MAC support<p>   
+    <p><a href="https://github.com/XTRABYTES/XCITE/releases/tag/v0.6.1-android">Download XCITE V0.6.1-android (apk for Android)</a></p>
+    <p>Android support<p>   
   </body>
 </html>
