--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <p><a href="https://github.com/XTRABYTES/XTRABYTES/releases/tag/pre-v1.5.1.0">XTRABYTES pre-v1.5.1.0</a><p>
     <p>seed nodes: 144.172.126.16 163.172.62.105 86.84.116.184 34.207.69.193 177.206.60.4 94.23.18.226 77.8.240.123 54.39.243.49</p>
     <p><a href="https://github.com/xtrabytesteam/xfuelclient/releases/tag/2.1.1.0-g">XFUEL pre-v2.1.1.0-g</a><p>
-    <p>seed nodes: 144.172.126.16 94.23.18.226 5.135.157.66 151.80.38.9 54.39.243.49</p>   
+    <p>seed nodes: 144.172.126.16 94.23.18.226 5.135.157.66 151.80.38.9 54.39.243.49</p>  
+    <p>bootstrap data: https://xtrabytes.dev/download/chain-data-20222910.zip</P>
     <hr>
     <h2>Status report and change log:</h2>
     <p><a href="https://github.com/XTRABYTES/XCITE/releases/download/V0.6.0/xcite.exe">Download XCITE V0.6.0 (exe for windows)</a></p>
